# Mochi.DearImGui

./: .gitattributes  .gitignore  .gitmodules  InfectedImGui.Generator.sln  InfectedImGui.sln  Mochi.DearImGui.sln  README.md  THIRD-PARTY-NOTICES.md  generate.cmd  generate.sh
.github/workflows/: Mochi.DearImGui.yml
InfectedImGui/: ImDrawCmd.cs  ImVector.cs  InfectedImGui.csproj  Pointer.cs
InfectedImGui.Generator/: InfectedImGui.Generator.csproj  Program.cs
InfectedImGui.Generator/#Transformations/: ImGuiCSharpTypeReductionTransformation.cs  ImGuiDllNameTransformation.cs  ImGuiEnumTransformation.cs  ImGuiInternalFixupTransformation.cs  InfectedImGuiNamespaceTransformation.cs  MiscFixesTransformation.cs  OrganizeOutputFilesByNamespaceTransformation.cs  RemoveIllegalImVectorReferencesTransformation.cs  RemoveUnneededDeclarationsTransformation.cs  __HACK__FixupFunctionPointerReturnTypes.cs
InfectedImGui.Generator/#TypeReferences/: ImVectorTypeReference.cs
InfectedImGui.Generator/Properties/: launchSettings.json
InfectedImGui.Native/: Build.cmd  Build.sh  CMakeLists.txt  InfectedImGui.cpp  InfectedImGuiConfig.h
InfectedImGui.Sample/: InfectedImGui.Sample.csproj  LazyPin.cs  Program.cs
InfectedImGui.Sample.Linux/: Gl3w.cs  Glfw.cs  InfectedImGui.Sample.Linux.csproj  LazyPin.cs  Program.cs
InfectedImGui.Sample/Win32/: ATOM.cs  ClassStyles.cs  ExtendedWindowStyles.cs  MSG.cs  MessageId.cs  Native.cs  PeekMessageFlags.cs  QueueStatusFlags.cs  RECT.cs  SetWindowPosFlags.cs  ShowWindowMode.cs  WNDCLASSEXW.cs  WindowStyles.cs
InfectedImGui/#Generated/: ConstantArrayHelpers.cs  FilesWritten.txt  Globals.cs  ID3D11Device.cs  ID3D11DeviceContext.cs  ImColor.cs  ImDrawChannel.cs  ImDrawCmd.cs  ImDrawCmdHeader.cs  ImDrawCornerFlags.cs  ImDrawData.cs  ImDrawList.cs  ImDrawListFlags.cs  ImDrawListSharedData.cs  ImDrawListSplitter.cs  ImDrawVert.cs  ImFont.cs  ImFontAtlas.cs  ImFontAtlasCustomRect.cs  ImFontAtlasFlags.cs  ImFontBuilderIO.cs  ImFontConfig.cs  ImFontGlyph.cs  ImFontGlyphRangesBuilder.cs  ImGui.cs  ImGuiBackendFlags.cs  ImGuiButtonFlags.cs  ImGuiCol.cs  ImGuiColorEditFlags.cs  ImGuiComboFlags.cs  ImGuiCond.cs  ImGuiConfigFlags.cs  ImGuiContext.cs  ImGuiDataType.cs  ImGuiDir.cs  ImGuiDockNodeFlags.cs  ImGuiDragDropFlags.cs  ImGuiFocusedFlags.cs  ImGuiHoveredFlags.cs  ImGuiIO.cs  (+43 more)
InfectedImGui/Infrastructure/: Pointer.cs
InfectedImGui/Internal/: ImGuiWindowVector.cs
Mochi.DearImGui/: DearImGuiInterpolatedStringHandler.cs  ImDrawCmd.cs  ImGui.cs  ImVector.cs  Mochi.DearImGui.csproj  MochiDearImGui.cs
Mochi.DearImGui.Generator/: Mochi.DearImGui.Generator.csproj  Program.cs
Mochi.DearImGui.Generator/#Adapters/: ImGuiStringAdapter.cs  (+1 more)
Mochi.DearImGui.Native/: CMakeLists.txt  Mochi.DearImGui.Native.csproj  build-native.cmd  build-native.sh
Mochi.DearImGui.OpenTK/: GamepadAxis.cs  GamepadButton.cs  GlfwNative.cs  Mochi.DearImGui.OpenTK.csproj  Mochi.DearImGui.OpenTK.nuspec  PlatformBackend.MultiViewportSupport.cs  PlatformBackend.cs  RendererBackend.cs  Win32.cs
Mochi.DearImGui.Ref/: Mochi.DearImGui.Ref.csproj
Mochi.DearImGui.Sample/: Mochi.DearImGui.Sample.csproj  Program.cs
tooling/: Common.csproj.props  Common.csproj.targets  Common.props  determine-rid.cmd  determine-rid.sh
(+110 files in other folders)
